Make the application build as expected in a single mvn clean install