@@ -50,10 +50,9 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
+				<version>3.8.1</version>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
+          <release>11</release>
 					<executable>javac11</executable>
 					<useIncrementalCompilation>false</useIncrementalCompilation>
 				</configuration>
@@ -61,7 +60,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>license-maven-plugin</artifactId>
-				<version>1.17</version>
+				<version>1.20</version>
 				<executions>
 					<execution>
 						<id>licences</id>
@@ -71,19 +70,25 @@
 					</execution>
 				</executions>
 			</plugin>
-
-			<plugin>
-				<groupId>io.repaint.maven</groupId>
-				<artifactId>tiles-maven-plugin</artifactId>
-				<version>2.10</version>
-				<extensions>true</extensions>
-				<configuration>
-					<filtering>false</filtering>
-					<tiles>
-						<tile>cd.connect.tiles:tile-java:[1.1, 2)</tile>
-					</tiles>
-				</configuration>
-			</plugin>
+      <plugin>
+        <groupId>org.gaul</groupId>
+        <artifactId>modernizer-maven-plugin</artifactId>
+        <version>1.8.0</version>
+        <configuration>
+          <failOnViolations>false</failOnViolations>
+          <javaVersion>1.8</javaVersion>
+        </configuration>
+        <executions>
+          <execution>
+            <id>modernizer</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>modernizer</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -110,15 +115,16 @@
 					</execution>
 				</executions>
 			</plugin>
+      
 			<plugin>
-				<groupId>io.swagger</groupId>
-				<artifactId>swagger-codegen-maven-plugin</artifactId>
-				<version>2.3.1</version>
-				<dependencies>
+        <groupId>io.swagger.codegen.v3</groupId>
+        <artifactId>swagger-codegen-maven-plugin</artifactId>
+        <version>3.0.8</version>
+        <dependencies>
 					<dependency>
 						<groupId>cd.connect.openapi</groupId>
 						<artifactId>connect-openapi-jersey2</artifactId>
-						<version>1.5-SNAPSHOT</version>
+						<version>3.4</version>
 					</dependency>
 				</dependencies>
 				<executions>
@@ -135,10 +141,18 @@
 							<inputSpec>${project.basedir}/swagger/swagger.yaml</inputSpec>
 							<language>jersey2-api</language>
 							<library>jersey2-api</library>
+
+              <configOptions> 
+                <configOption>
+                  <name>meep</name>
+                  <value>meep</value>
+                </configOption>
+              </configOptions>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
+			
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
@@ -157,55 +171,41 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>io.fabric8</groupId>
-				<artifactId>docker-maven-plugin</artifactId>
-				<version>0.22.1</version>
-				<configuration>
-					<images>
-						<image>
-							<name>connect_todo/${docker.appname}:${docker.appversion}</name>
-
-							<alias>${project.build.finalName}</alias>
-							<build>
-								<from>openjdk:11.0.2-jdk-slim-stretch</from>
-								<assembly>
-									<descriptorRef>artifact</descriptorRef>
-									<targetDir>/app</targetDir>
-									<user>nobody:nobody:nobody</user>
-								</assembly>
-							</build>
-						</image>
-					</images>
-				</configuration>
-				<executions>
-					<execution>
-						<id>build</id>
-						<phase>install</phase>
-						<goals>
-							<goal>build</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>com.bluetrainsoftware.maven</groupId>
-				<artifactId>bathe-plugin</artifactId>
-				<version>2.6</version>
-				<extensions>true</extensions>
-				<executions>
-					<execution>
-						<id>default</id>
-						<phase>package</phase>
-						<goals>
-							<goal>time</goal>
-						</goals>
-						<configuration>
-							<jumpClass>todo.backend.Application</jumpClass>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <version>1.1.2</version>
+        <executions>
+          <execution>
+            <id>docker-build</id>
+            <phase>install</phase>
+            <goals>
+              <goal>buildTar</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <allowInsecureRegistries>false</allowInsecureRegistries>
+          <from>
+            <image>openjdk:11.0.3-jdk-slim-stretch</image>
+          </from>
+          <to><image>cdconnect/${project.artifactId}</image></to>
+          <container>
+            <mainClass>bathe.BatheBooter</mainClass>
+            <jvmFlags>
+              <jvmFlag>--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED</jvmFlag>
+              <jvmFlag>-Dio.netty.tryReflectionSetAccessible=true</jvmFlag>
+              <jvmFlag>--add-opens=java.base/java.nio=ALL-UNNAMED</jvmFlag>
+            </jvmFlags>
+            <args>
+              <arg>-Rtodo.backend.Application</arg>
+            </args>
+            <ports>
+              <port>8099</port>
+            </ports>
+          </container>
+        </configuration>
+      </plugin>
 		</plugins>
 	</build>
 </project>
